# SynCT

./: CMakeLists.txt
SynCT/: SynCT.py
SynCT/mri_synthmorph/: mri_synthmorph.py
SynCT/mri_synthmorph/synthmorph/: registration.py
SynCT/mri_synthmorph/voxelmorph/tf/: networks.py
